--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
 buffer space characters
 print out before next non-space (or at the end of the program)
-search mandel.b for more arithmetic patterns<
+search mandel.b for more arithmetic patterns
